<resources>
    <string name="app_name">Matcha</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="portrait">头像</string>
    <string name="nick_name">昵称</string>
    <string name="name">姓名</string>
    <string name="phone">联系电话</string>
    <string name="pe_text_data">体质健康数据</string>
    <string name="label_register">注\t\t册</string>
    <string name="label_login">登\t\t录</string>
    <string name="label_username">用户名</string>
    <string name="label_password">密码</string>
    <string name="label_password_confirm">确认密码</string>
    <string name="label_go_register">去注册</string>
    <string name="label_go_login">去登录</string>
    <string name="label_personal_info">个人信息</string>
    <string name="communicate">交流</string>
    <string name="join_communicate_group">加入交流群</string>
    <string name="have_joined_group">已加入的交流群</string>
    <string name="label_hi_username">Hi.%1$s</string>
    <string name="label_date">%1$s年%2$s月%3$s日</string>
    <string name="label_scan">扫一扫</string>
    <string name="label_reserve">预约</string>
    <string name="label_advisory">咨询</string>
    <string name="label_evaluate">评估</string>

</resources>
