<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.allen.library.SuperTextView
                android:id="@+id/portrait"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:sBottomDividerLineMarginLR="16dp"
                app:sLeftTextSize="18sp"
                app:sLeftTextString="@string/portrait"
                app:sRightIconRes="@mipmap/ic_launcher"
                app:sRightIconShowCircle="true" />

            <com.allen.library.SuperTextView
                android:id="@+id/nickname"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:sBottomDividerLineMarginLR="16dp"
                app:sLeftTextSize="18sp"
                app:sLeftTextString="@string/nick_name"
                app:sRightTextString="ABC"
                app:sRightViewMarginRight="16dp" />

            <com.allen.library.SuperTextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:sBottomDividerLineMarginLR="16dp"
                app:sLeftTextSize="18sp"
                app:sLeftTextString="@string/name"
                app:sRightTextString="张三"
                app:sRightViewMarginRight="16dp"/>

            <com.allen.library.SuperTextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:sBottomDividerLineMarginLR="16dp"
                app:sLeftTextSize="18sp"
                app:sLeftTextString="@string/phone"
                app:sRightTextString="未设置"
                app:sRightTextColor="@android:color/black"
                app:sRightViewMarginRight="16dp"/>

            <com.allen.library.SuperTextView
                android:id="@+id/pe_data"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:sBottomDividerLineMarginLR="16dp"
                app:sLeftTextSize="18sp"
                app:sLeftTextString="@string/pe_text_data" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>