<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    tools:context="cn.zjnu.matcha.fragments.account.LoginFragment">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient_black"
        android:paddingBottom="28dp"
        android:paddingTop="40dp"
        app:title="@string/label_register"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_account_input"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_username"
                android:tint="@color/colorPrimary" />

            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="4dp"
                android:background="@null"
                android:hint="@string/label_username"
                android:inputType="text"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/textSecond"
                android:textCursorDrawable="@drawable/ic_cursor"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:background="#20000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_key"
                android:tint="@color/colorPrimary" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="4dp"
                android:background="@null"
                android:hint="@string/label_password"
                android:inputType="textPassword"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"

                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/textSecond"
                android:textCursorDrawable="@drawable/ic_cursor"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_key"
                android:tint="@color/colorPrimary" />

            <EditText
                android:id="@+id/edit_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="4dp"
                android:background="@null"
                android:hint="@string/label_password_confirm"
                android:inputType="textPassword"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/textSecond"
                android:textCursorDrawable="@drawable/ic_cursor"
                android:textSize="14sp" />


        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/txt_go_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/label_go_login"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/ic_chevron_right"
            android:tint="@color/white" />
    </FrameLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            app:indicatorColor="@color/loadingColor" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="172dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_btn_black"
            android:text="@string/label_register"
            android:textColor="@color/white" />

    </FrameLayout>


</LinearLayout>
